<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".IntroActivity" >

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/run_it" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/button" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/getting_accounts"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_accounts" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/permissions"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:textIsSelectable="true"
                android:padding="5dp"
                android:id="@+id/permissions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#333333"
                android:textColor="#ffffff"
                android:typeface="monospace"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/code"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/code_sample"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#333333"
                android:padding="5dp"
                android:textColor="#ffffff"
                android:textIsSelectable="true"
                android:textSize="12sp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>